Working fasta reader
Former-commit-id: b749312794eaa435557f6c8ade728901facacd62

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = include/cu
 	url = git@github.com:danfis/cu.git
 	ignore = dirty
+[submodule "include/readfq"]
+	path = include/readfq
+	url = git@github.com:lh3/readfq.git
