working update with histogram creations... refactor in progress
Former-commit-id: f0c8e38cce0677156b38a2c81b37f773cbe56d08

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "include/readfq"]
 	path = include/readfq
 	url = git@github.com:lh3/readfq.git
+[submodule "include/gnuplot-iostream"]
+	path = include/gnuplot-iostream
+	url = git://gitorious.org/gnuplot-iostream/gnuplot-iostream.git
